data-platform/jupyter/openshift/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-openshift-router-to-jupyter
  namespace: edl-data
spec:
  podSelector:
    matchLabels:
      app: edl-jupyter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
      ports:
        - protocol: TCP
          port: 8888
